[workspace]
resolver = "2"
members = [
    "dedicated_server",
    "orchestrator",
    "gatekeeper",
    "shared",
    "game_sockets",

    "brocker",
    "spatial_service",
    "authority",
    "client"]

# Centralized dependency management
[workspace.dependencies]
shared = { path = "./shared" }
bevy = { version = "0.18", default-features = false }
#game_sockets =
quinn = "0.11.9"
tokio = { version = "1.52.3", features = ["full"] }
axum = "0.8.9"
redis = { version = "1.2.1", features = ["tokio-comp", "json"] }
deadpool-redis = "0.23.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
anyhow = "1.0.102"
thiserror = "2.0.18"
bytes = "1.5"
bincode = "1.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
