[package]
name = "brocker"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy.workspace = true
tokio.workspace = true
uuid.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

shared = { path = "../shared" }
game_sockets = { path = "../game_sockets" }