[package]
name = "dedicated_server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
bevy.workspace = true
tokio.workspace = true
quinn.workspace = true
serde_json.workspace = true
uuid.workspace = true
game_sockets = { path = "../game_sockets" }
bytes = "1.11.1"
tracing.workspace = true
tracing-subscriber.workspace = true
