[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
game_sockets = { path = "../game_sockets" }
uuid = { version = "1.23.2", features = ["v4"] }
bytes = "1.11.1"